--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,8 @@ phases:
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
-      # - $(aws ecr get-login --region $AWS_REGION)
+      - echo ${AWS_REGION}
+      - $(aws ecr get-login --region ${AWS_REGION})
   build:
     commands:
       - echo Build started on $(date)
